--- a/main.css
+++ b/main.css
@@ -4,3 +4,15 @@ html {
 body {
     background-image: linear-gradient(rgb(0, 0, 65), rgb(255, 240, 157));
 }
+nav {
+    border: 1px solid rgb(0, 0, 65);
+    background: navy;
+}
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  nav li {
+      display: inline;
+  }
